[gd_scene load_steps=5 format=3 uid="uid://cqogqc5g17bkb"]

[ext_resource type="Script" path="res://scenes/shop/item.gd" id="1_vp3ca"]
[ext_resource type="Texture2D" uid="uid://cilcrp4kvphqw" path="res://assets/interface/Spritesheet_UI_Flat.png" id="2_640wh"]
[ext_resource type="Texture2D" uid="uid://dh7lklofckxxe" path="res://assets/items/golden_egg.png" id="4_jcdq2"]
[ext_resource type="Texture2D" uid="uid://d3qs3kcfo86vu" path="res://assets/interface/graphics/logo.png" id="5_kc81l"]

[node name="item" type="Control"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 200.0
script = ExtResource("1_vp3ca")

[node name="SpecialBackground" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_640wh")
region_rect = Rect2(224, 32, 96, 96)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="StandardBackground" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_640wh")
region_rect = Rect2(32, 32, 96, 96)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -95.0
offset_top = 4.0
offset_right = 95.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Item"
horizontal_alignment = 1

[node name="ItemTexture" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture = ExtResource("5_kc81l")
expand_mode = 4
stretch_mode = 5

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "0"
icon = ExtResource("4_jcdq2")
expand_icon = true

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
